--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,41 +1,64 @@
 body {
-	background: #123;
-	border-top: 5px solid #000;
-	color: #333;
-	font-size: 11px;
-	padding: 20px 0 40px;
+    background: #123;
+    border-top: 5px solid #000;
+    color: #333;
+    font-size: 11px;
+    padding: 20px 0 40px;
 }
 
 a {
-	color: #123;
-	text-decoration: none;
+    color: #123;
+    text-decoration: none;
 }
 
 a:hover {
-	text-decoration: underline;
+    text-decoration: underline;
 }
 
 h1 {
-	font-family: Georgia, serif;
-	font-weight: normal;
-	text-align: center;
+    font-family: Georgia, serif;
+    font-weight: normal;
+    text-align: center;
 }
 
 h2 {
-	padding: 20px 0 0;
-	text-align: center;
+    padding: 20px 0 0;
+    text-align: center;
 }
 
 p {
-	border: 1px solid #666;
-	overflow: hidden;
-	padding: 10px 20px;
-	text-align: center;
+    border: 1px solid #666;
+    overflow: hidden;
+    padding: 10px 20px;
+    text-align: center;
 }
 
 
 .container_12 {
-	background: #fff;
-	padding-bottom: 20px;
-	padding:10px;
+    background: #fff;
+    padding-bottom: 20px;
+    padding:10px;
+}
+
+ul {
+    list-style: none;
+}
+
+input.text {
+    margin: 3px 20px;
+    padding: 3px 20px;
+    width: 450px;
+    border: 1px solid #666;
+}
+
+textarea {
+    margin: 3px 20px;
+    padding: 3px 20px;
+    width: 450px;
+    border: 1px solid #666;
+}
+
+p.buttons {
+    border:0;
+    text-align:left;
 }
